--- a/styles/dashboard.css
+++ b/styles/dashboard.css
@@ -44,6 +44,10 @@ h6 {
     color: #2196F3;
 }
 
+.btn-sky small {
+    color: #2196F3;
+}
+
 .btn-sky:hover {
     background: #d9eaf5;
     cursor: pointer;
@@ -102,6 +106,15 @@ h6 {
 
 td {
     line-height: 15px;
+}
+
+.form--control,
+.form--control:focus {
+    width: 50%;
+    border-radius: 20px;
+    border: 1px solid rgb(178, 180, 182);
+    height: 40px;
+    outline: none;
 }
 
 @media screen and (max-width: 767.98px) {
